レビュー指摘の修正 1.clickは使用せず、onメソッドを使用する。→[click]で検索をかけて手動置換、動作が変わらないことを目視で確認。 2.[,]の後にはスペースを入れる。→[,]で検索をかけてスペースを追加。 3.引数にファンクションが二つ入る場合は行を分けた方が可読性が良い。ホバー処理の記載を修正

--- a/work/third/index.html
+++ b/work/third/index.html
@@ -45,19 +45,19 @@ $(function() {
     $(this).removeClass('.is-hidden');
     switch (click) {
       case HOME:
-        $('.contents').find('li').eq(text).removeClass('.is-hidden');
-        $('.contents').find('li').eq(1).addClass('.is-hidden');
-        $('.contents').find('li').eq(2).addClass('.is-hidden');
+        $('.contents').find('li').eq(HOME).removeClass('.is-hidden');
+        $('.contents').find('li').eq(NEWS).addClass('.is-hidden');
+        $('.contents').find('li').eq(MYPAGE).addClass('.is-hidden');
         break;
       case NEWS:
-        $('.contents').find('li').eq(text).removeClass('.is-hidden');
-        $('.contents').find('li').eq(0).addClass('.is-hidden');
-        $('.contents').find('li').eq(2).addClass('.is-hidden');
+        $('.contents').find('li').eq(NEWS).removeClass('.is-hidden');
+        $('.contents').find('li').eq(HOME).addClass('.is-hidden');
+        $('.contents').find('li').eq(MYPAGE).addClass('.is-hidden');
         break;
       case MYPAGE:
-        $('.contents').find('li').eq(text).removeClass('.is-hidden');
-        $('.contents').find('li').eq(0).addClass('.is-hidden');
-        $('.contents').find('li').eq(1).addClass('.is-hidden');
+        $('.contents').find('li').eq(MYPAGE).removeClass('.is-hidden');
+        $('.contents').find('li').eq(HOME).addClass('.is-hidden');
+        $('.contents').find('li').eq(NEWS).addClass('.is-hidden');
         break;
     }*/
   });
