レビュー指摘の修正と３のレビュー依頼コミット 1.変数のと処理の間に開業 2.clickをonに変更 3.click時の読み込みをキャッシュから行うように修正

--- a/work/second/index.html
+++ b/work/second/index.html
@@ -29,11 +29,11 @@
 // .fadeOut() 一定時間かけてフェードアウトする。
 
 $(function() {
-  $('.modal-show').click(function() {
+  $('.modal-show').on('click', function() {
     /* Act on the event */
     $('.modal').fadeIn(500);
   });
-  $('.modal-close').click(function() {
+  $('.modal-close').on('click', function() {
     /* Act on the event */
     $('.modal').fadeOut(500);
   });
