--- a/work/first/index.html
+++ b/work/first/index.html
@@ -102,26 +102,30 @@ $(function() {
 // 第7問  id='q7'の子要素をクリックしたら、その要素のインデックス（何番目か）をconsole.log()とalert()を用いて表示させよ。
   $('#q7').find('li').on('click', function() {
     var targetNum = $(this).index();
+
     console.log(targetNum);
     alert(targetNum);
   });
 // 第8問  id='q8'の要素をhoverしたらlargeというクラスを付与し、hoverが外れたら、クラスを削除せよ。
-  $('#q8').hover(function()
-  {
-    $(this).addClass('large');
-  },
-  function() {
-    $(this).removeClass('large');
-  });
+  $('#q8').hover(
+    function() {
+      $(this).addClass('large');
+    },
+    function() {
+      $(this).removeClass('large');
+    }
+  );
 // 第9問  id='q9'の要素をクリックしたらこの要素に設定してあるdata属性をconsoleに表示せよ。
   $('#q9').on('click', function() {
     /* Act on the event */
     var text = $(this).data('text');
+
     console.log(text);
   });
 // 第10問 id='q10'の子要素をクリックしたら、その要素のインデックスと等しいid='q11'の子要素にlargeというクラスを追加せよ。
   $('#q10').find('li').on('click', function() {
     var num = $(this).index();
+
     $('#q11').find('li').eq(num).addClass('large');
   });
 });
