--- a/work/third/index.html
+++ b/work/third/index.html
@@ -32,37 +32,16 @@
 // .removeClass() クラスを削除します。
 
 $(function() {
-  $('.nav').find('li').click(function() {
-    var click = $(this).index();
-    $('.contents').find('li').eq(click).removeClass('.is-hidden');
+  var $nav = $('.nav').find('li');
+  var $contents = $('.contents').find('li');
+
+  $nav.on('click', function() {
     /* Act on the event */
-    /*
     var click = $(this).index();
-    var HOME = 0;
-    var NEWS = 1;
-    var MYPAGE = 2;
-    $('.contents').find('li').eq(click).removeClass('.is-hidden');
-    $(this).removeClass('.is-hidden');
-    switch (click) {
-      case HOME:
-        $('.contents').find('li').eq(HOME).removeClass('.is-hidden');
-        $('.contents').find('li').eq(NEWS).addClass('.is-hidden');
-        $('.contents').find('li').eq(MYPAGE).addClass('.is-hidden');
-        break;
-      case NEWS:
-        $('.contents').find('li').eq(NEWS).removeClass('.is-hidden');
-        $('.contents').find('li').eq(HOME).addClass('.is-hidden');
-        $('.contents').find('li').eq(MYPAGE).addClass('.is-hidden');
-        break;
-      case MYPAGE:
-        $('.contents').find('li').eq(MYPAGE).removeClass('.is-hidden');
-        $('.contents').find('li').eq(HOME).addClass('.is-hidden');
-        $('.contents').find('li').eq(NEWS).addClass('.is-hidden');
-        break;
-    }*/
+    $contents.addClass('is-hidden');
+    $contents.eq(click).removeClass('is-hidden');
   });
 });
-
 
 </script>
 </body>
