--- a/work/tenth/index.html
+++ b/work/tenth/index.html
@@ -64,6 +64,70 @@
   //   // この中にデータ取得後の動きを記述していきます。
   // });
 //
+
+$(function() {
+  /*** keywordの検知処理 ***/
+  var $search__btn = $('.search__btn');
+  var $lists = $('.lists');
+  var $keyword = $('#js-search-word');
+  var $htmlstr ='';
+
+  /* ユーザからのボタン押下時の処理 */
+  $keyword.on('change', function() {
+    /* Act on the event */
+    $('.lists__item').remove();
+    console.log('change_word');
+  });
+
+  $search__btn.on('click', function() {
+    /* Act on the event */
+    $keyword = $('#js-search-word').val();
+    if($keyword == '') {
+      alert('キーワードを入力してください');
+    }
+    else {
+      $.ajax({
+        url: 'https://app.rakuten.co.jp/services/api/BooksTotal/Search/20130522',
+        type: 'GET',
+        datatype: 'json',
+        data: {
+          // 「区分:サービス固有パラメーター」を確認して、必要な情報をdata内に入れましょう。
+          applicationId: '1019399324990976605', // (今回はこのIDを使用してください)
+          booksGenreId: '001',
+          keyword: $keyword,
+          hits: 20,
+        },
+      }).done(function(data) {
+        // この中にデータ取得後の動きを記述していきます。
+        data.Items.forEach(function(item) {
+        if(item.count == 0) {
+          htmlstr = '<p>検索件数は０件です</p>'
+        }
+        else {
+          htmlstr =
+            '<li class="lists__item">' +
+              '<div class="lists__item__inner">' +
+                '<a href="' + item.Item.itemUrl +'" class="lists__item__link" target="_blank">' +
+                  '<img src="' + item.Item.largeImageUrl +'" class="lists__item__img" alt="' +
+                  '<p class="lists__item__detail">作品名：' + item.Item.title + '</p>' +
+                  '<p class="lists__item__detail">作者　：' + item.Item.author + '</p>' +
+                  '<p class="lists__item__detail">出版社：' + item.Item.publisherName + '</p>' +
+                '</a>' +
+              '</div>' +
+            '</li>';
+           }
+        $lists.append(htmlstr);
+        });
+      }).fail(function() {
+        //失敗時の処理
+        alert('通信に失敗しました');
+        console.log('失敗');
+      });
+    }
+  });
+});
+
+
 </script>
 </body>
 </html>
