--- a/work/fifth/index.html
+++ b/work/fifth/index.html
@@ -25,8 +25,7 @@
       </select>
     </div>
     <ul class="list">
-      <li data-category-type="css">
-        <a href="http://getbootstrap.com/" class="article">
+      <li data-category-type="css">        <a href="http://getbootstrap.com/" class="article">
           <i class="article-icon is-bootstrap"></i>
           <p class="article-name">Bootstrap</p>
         </a>
